Bug 358408 - Amarok cannot fetch tabs from ultimate-guitar.com anymore
Summary: Amarok cannot fetch tabs from ultimate-guitar.com anymore
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Tabs (other bugs)
Version First Reported In: 2.8-git
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-23 09:21 UTC by wnc7prog
Modified: 2016-01-24 13:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wnc7prog 2016-01-23 09:21:37 UTC
The tabs cannot be fetched because ultimate-guitar.com needs https to work now but amarok tries to use http.

Reproducible: Always




This can be fixed by setting the method to "https" instead of "http":
From f1633c277192031cba0a26744bbe41fc687f74a4 Mon Sep 17 00:00:00 2001
From: WNC7 <wnc7prog@yahoo.com>
Date: Sat, 23 Jan 2016 10:10:11 +0100
Subject: [PATCH 1/1] Use https to fetch tabs because ultimate-guitar.com
 disabled http

---
 src/context/engines/tabs/TabsEngine.cpp | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)

diff --git a/src/context/engines/tabs/TabsEngine.cpp b/src/context/engines/tabs/TabsEngine.cpp
index 24a89df..6c0504c 100644
--- a/src/context/engines/tabs/TabsEngine.cpp
+++ b/src/context/engines/tabs/TabsEngine.cpp
@@ -244,7 +244,7 @@ TabsEngine::queryUltimateGuitar( const QString &artist, const QString &title )
 {
     // Query UltimateGuitar.com (filtering guitar (tabs + chords) and bass tabs)
     KUrl ultimateGuitarUrl;
-    ultimateGuitarUrl.setScheme( "http" );
+    ultimateGuitarUrl.setScheme( "https" );
     ultimateGuitarUrl.setHost( "www.ultimate-guitar.com" );
     ultimateGuitarUrl.setPath( "/search.php" );
     ultimateGuitarUrl.addQueryItem( "view_state", "advanced" );
-- 
2.7.0
Comment 1 Myriam Schweingruber 2016-01-23 18:39:07 UTC
Thanks for the report, indeed, this doesn't work with http anymore.
Comment 2 Myriam Schweingruber 2016-01-24 13:13:08 UTC
Git commit e017e7c501d4966d92653e4845a4f5c348547b82 by Myriam Schweingruber.
Committed on 24/01/2016 at 12:58.
Pushed by schweingruber into branch 'master'.

Fix tabs applet
Change to https to allow fetching guitar tabs again
FIXED-IN: 2.9

M  +1    -1    src/context/engines/tabs/TabsEngine.cpp

http://commits.kde.org/amarok/e017e7c501d4966d92653e4845a4f5c348547b82