Fix tabs applet Change to https to allow fetching guitar tabs again

BUG: 358408
FIXED-IN: 2.9